fixed cards on mobile

--- a/sass/elements/_cards.scss
+++ b/sass/elements/_cards.scss
@@ -3,18 +3,19 @@
 // ********
 
 .card {
+    display: grid;
+    padding-left: map-get($map: $spacing, $key: 6);
     border: 2px solid $color__neutral-100;
     border-radius: 4px;
-    padding-left: 2rem;
     background-color: white;
-    display: grid;
+    overflow: hidden;
     transition: all 300ms;
 }
 
 .card-link {
     text-decoration: none;
     height: 100%;
-    width: 100%;   
+    // width: 100%;   
 
     &:hover .card{
         border-color: $color__primary-700;
@@ -160,9 +161,9 @@
         margin: 0;
     }
 
-    &.card > h3.entry-title {
+    &.card > h3 {
         padding: 0 1rem;
-        // color: $color__neutral-700;
+        color: $color__neutral-700;
         position: relative;
         overflow: hidden;
         margin: 0;
@@ -174,7 +175,7 @@
             position: absolute;
             bottom: 0;
             right: 0;
-            width: 30%;
+            width: 40%;
             height: 2rem;
             background: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1) 50%);
         }
@@ -183,6 +184,11 @@
     .entry-meta {
         padding: 0 1rem;
         font-weight: 400;
+        
+        > span {
+            text-overflow: ellipsis;
+            white-space: nowrap;
+        }
     }
 }
 
@@ -223,11 +229,43 @@
     
     .card-portfolio {
         width: 100%;
+        // margin: map-get($spacing, 5) 0 map-get($map: $spacing, $key: 7 );
     }
 
     .card-grid {
         grid-template-columns: 100%;
         grid-auto-flow: row;
         row-gap: 4rem;
+    }
+
+    .card-blog-post {
+        grid-template-columns: 100%;
+
+        &.card > h3 {
+            @include font-size(1.5);
+            color: $color__primary-700;
+            font-weight: 600;
+            line-height: 1.3333;
+        }
+    }
+
+
+    .card-certificate {
+        // here there is a problem: .card-certificate is under horizontal-slider and horizontal slider has a grid with a gap of 4rem. Horizontal slider is used also in other instances — so changing the dispaly to block will lead to other hard fixes. I like to make a trick just for card-certificate than tricks every other instances in order to accomodate card-container. I don't want that much spacing between items in card-certificate for mobile. What I do is put the height to 0 so that the actual spacing between items 4rem-height of the title (2.75rem)
+        width: 100%;
+        height: 0;
+        margin: 0;
+        border: none;
+        overflow: visible;
+
+        &:first-child {
+            margin-top: 2.5rem;
+        }
+
+        figure {
+            // remove the certificate image on mobile — too much distraction.
+            display: none;
+        }
+
     }
 }
