--- a/sass/modules/_alignments.scss
+++ b/sass/modules/_alignments.scss
@@ -141,14 +141,3 @@
 	}
 }
 
-
-@include media("screen", "<phone") {
-    .horizontal-slider.full-width {
-		margin: 0;
-		grid-template-rows: 1fr;;
-
-		& > div {
-			grid-auto-rows: 1fr 1fr;
-		}
-	}
-}
