--- a/sass/site/primary/_blog.scss
+++ b/sass/site/primary/_blog.scss
@@ -172,3 +172,40 @@
         grid-column-start: span 3;
     }
 }
+
+@include media("screen", "<phone") {
+    .blog-catalog {
+        display: block;
+    }
+
+    .blog-post-grid {
+        grid-template-columns: 100%;
+        grid-auto-flow: row;
+        row-gap: map-get($map: $spacing, $key: 7 );
+    }
+
+    .single-post {
+        .site-content {
+            display: block;
+        }
+    }
+
+    .related-posts {
+        display: block;
+        // grid-template-columns: 1fr;
+        // grid-template-rows: 1fr 1fr;
+        // grid-auto-flow: row;
+
+        .card {
+            margin-top: map-get($map: $spacing, $key: 7);
+
+            &:first-child {
+                margin-top: map-get($map: $spacing, $key: 4);
+            }
+
+            > h3 {
+                margin: 0;
+            }
+        }
+    }
+}
